2002-03-26  Derek Price  <oberon@umich.edu>

	* configure.in: Add a FIXME comment.

2002-03-21  Derek Price  <oberon@umich.edu>

	* aclocal.m4: Regenerate with recent version of Autoconf.  It looks
	like things changed because of some RedHat patches or the like which
	didn't change the Autoconf version number, but the differences look
	like useful changes so I'm going to use them for consistency.
	* config.h.in: Ditto.
	* configure: Ditto.

2002-03-19  Larry Jones  <larry.jones@sdrc.com>

	* NEWS (Changes since 1.11.1p1): Note -S flag for [r]log.

2002-02-08  Larry Jones  <larry.jones@sdrc.com>

	* NEWS (Changes since 1.11.1p1): Note read-only tag fix.

2002-02-01  Larry Jones  <larry.jones@sdrc.com>

	* NEWS (Changes from 1.9 to 1.10): Note -t/-f wrappers disabled.

2001-12-12  Larry Jones  <larry.jones@sdrc.com>

	* NEWS (Changes from 1.10 to 1.11): Note update -C.

2001-12-03  Larry Jones  <larry.jones@sdrc.com>

	* TODO (206, 207): New items.

	* NEWS (Changes since 1.11.1p1): Note -F flag for [r]annotate.
	(Changes from 1.11 to 1.11.1): Note :: for log.

2001-10-18  Derek Price  <dprice@collab.net>

	* TESTS: Remove outdated note about tests that don't use the dotest
	function and add some notes on writing tests.
	* HACKING: Reference TESTS file in note about submitting test cases
	with patches.

2001-09-28  Larry Jones  <larry.jones@sdrc.com>

	* noautomake.sh: Protect wildcards from shell expansion.
	(Patch submitted by Stephen Cameron <smcameron@yahoo.com>.)

2001-09-22  Derek Price  <dprice@collab.net>

	* INSTALL (Building from source code under Unix): Continue
	noautoconf.sh note, stressing source checked out from CVS.

2001-09-22  Derek Price  <dprice@collab.net>

	* noautomake.sh: Correct usage.

2001-09-13  Derek Price  <dprice@collab.net>

	* Makefile.am (AUTOMAKE_OPTIONS): Updated to require Automake 1.5.
	* NEWS (Changes since 1.11.1p1): Added note about standardizing on
	Automake 1.5.