@@ -1,3 +1,9 @@
+2002-04-03  Derek Price  <oberon@umich.edu>
+
+	* cvs.spec.in: Use a lowercase "cvshome.org".  Add some RedHat safety
+	features to avoid "rm -rf /".  No need to rebuild the docs in the
+	distribution.  Don't strip the binary.
+
 2002-03-26  Derek Price  <oberon@umich.edu>
 
 	* configure.in: Add a FIXME comment.
